6419154 libpcp pcp_init routine should accept service names 6428416 CPUs greater than NCPU are stopped too early in boot 6436930 qcn drv needs to handle EWOULDBLOCK returned by hv_cnputchar 6437727 vDisk should support EFI labels 6437738 vDisk should support devid 6441930 fillsysinfo should cap max sun4v queue size to kernel limits 6441933 The broken MD detection code should be improved 6445825 domaining_enabled variable does not tell the whole story 6449959 vDisk DKIOCSETWCE/DKIOCGETWCE ioctls are not correctly implemented 6451118 Elevate libpcp from a platform lib to a sun4v lib 6451490 ldc_chkq incorrectly returns queue empty when data is available on streaming mode channel 6456875 VIO drivers should use LDC shared memory for better performance 6456880 LDC link layer fails to clear interrupt state properly 6456928 drd service is not enabled if installed through an upgrade 6457162 vswitch needs to cope with dropped pkts when talking to obp 6457166 vswitch calculating bounded range of descriptors incorrectly

--- a/usr/src/lib/libpcp/sparc/Makefile
+++ b/usr/src/lib/libpcp/sparc/Makefile
@@ -30,13 +30,14 @@ UTSBASE= ../../../uts
 
 PLATINCS += -I$(USR_PLAT_DIR)/sun4v/include -I$(UTSBASE)/sun4v
 
-PLATFORM_OBJECTS= libpcp.o
+PLATFORM_OBJECTS= libpcp.o pcp_utils.o
 
 #
 # platform library directory (/usr/platform/SUNW,Sun-Fire-T200/lib)
 #
-PLATFORM=SUNW,Sun-Fire-T200
-LINKED_PLATFORMS = SUNW,Netra-CP3060
+PLATFORM=sun4v
+LINKED_PLATFORMS = SUNW,Sun-Fire-T200 \
+		SUNW,Netra-CP3060
 
 include ../Makefile.com
 
