--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -134,7 +134,7 @@ VNEX_OBJS	= vnex.o
 CNEX_OBJS	= cnex.o
 GLVC_OBJS	= glvc.o glvc_hcall.o
 MDESC_OBJS	= mdesc.o
-LDC_OBJS	= ldc.o vio_util.o
+LDC_OBJS	= ldc.o vio_util.o vdsk_common.o
 VLDC_OBJS	= vldc.o
 VCC_OBJS	= vcc.o
 VNET_OBJS	= vnet.o vnet_gen.o
