PSARC 2005/707 Surya: Forwarding Performance Enhancement 6385609 Solaris has poor V4 forwarding throughput

--- a/usr/src/cmd/ipf/tools/Makefile.tools
+++ b/usr/src/cmd/ipf/tools/Makefile.tools
@@ -212,6 +212,9 @@ lint: 	lint_SRCS
 %.o:	../%.c
 	$(COMPILE.c) $<
 
+%.o:	$(SRC)/common/net/patricia/%.c
+	$(COMPILE.c) $<
+
 include ../../../Makefile.targ
 
 FRC:
