--- a/usr/src/tools/Makefile.tools
+++ b/usr/src/tools/Makefile.tools
@@ -62,6 +62,7 @@ ROOTONBLDMACHBINARIES=	$(BINARIES:%=$(ROOTONBLDBINMACH)/%)
 ROOTONBLDENVFILES=	$(ENVFILES:%=$(ROOTONBLDENV)/%)
 ROOTONBLDGKFILES=	$(GKFILES:%=$(ROOTONBLDGK)/.%)
 ROOTONBLDPERLFILES=	$(PERLFILES:%=$(ROOTONBLDBIN)/%)
+ROOTONBLDPYFILES=	$(PYFILES:%=$(ROOTONBLDBIN)/%)
 ROOTONBLDMAN1FILES=	$(MAN1FILES:%=$(ROOTONBLDMAN1)/%)
 ROOTONBLDABIAUDITFILES=	$(ABI_AUDITFILES:%=$(ROOTONBLDETCABI)/%)
 
