--- a/usr/src/cmd/mailx/Makefile
+++ b/usr/src/cmd/mailx/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -39,9 +38,6 @@ OBJS=	myfopen.o aux.o cmd1.o cmd2.o cmd3.o \
 
 SRCS=	$(OBJS:.o=.c)
 
-VEROBJ=	version.o
-VERSRC= $(VEROBJ:.o=.c)
-MAILXVERSION= 5.0
 MISC= misc
 
 include ../Makefile.cmd
@@ -83,16 +79,9 @@ $(ROOTETCMAILD)/% : $(MISC)/%
 
 all: $(PROG) $(MAILXHELP) $(MAILXRC) $(UCBMAILRC)
 
-$(PROG): $(OBJS) $(VEROBJ) $(LIBMAIL)
-	$(LINK.c) $(OBJS) $(VEROBJ) -o $@ $(LDLIBS)
+$(PROG): $(OBJS) $(LIBMAIL)
+	$(LINK.c) $(OBJS) -o $@ $(LDLIBS)
 	$(POST_PROCESS)
-
-$(VEROBJ): $(VERSRC)
-	$(COMPILE.c) $(VERSRC)
-
-# want to recreate version.c whenever (and only when) mailx needs to be rebuilt
-$(VERSRC): $(OBJS) $(LIBMAIL)
-	$(ECHO) "const char *const version=\"mailx version $(MAILXVERSION) `date`\";" > $@
 
 install: all $(ROOTMAILXD) $(ROOTPROG) $(ROOTMAILXHELP) \
 	$(ROOTMAILXRC) $(ROOTUCBMAIL) $(ROOTUCBCAPMAIL) $(ROOTUCBMAILRC)
@@ -111,7 +100,7 @@ $(POFILE):      $(POFILES)
 	cat     $(POFILES)      > $@
 
 clean:
-	$(RM) $(OBJS) $(VEROBJS) version.c
+	$(RM) $(OBJS)
 
 lint: lint_SRCS
 
