--- a/usr/src/tools/Makefile.targ
+++ b/usr/src/tools/Makefile.targ
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,8 +21,8 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1998,2001 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 # common target definitions for tool builds
 
@@ -37,6 +36,11 @@ lint_SRCS:
 	$(LINT.c) $(SRCS)
 
 %:	%.pl
+	$(RM) $@
+	cat $< > $@
+	chmod +x $@
+
+%:	%.py
 	$(RM) $@
 	cat $< > $@
 	chmod +x $@
