--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -136,6 +136,7 @@ CFLAGS		+= $(CERRWARN)
 CFLAGS		+= $(CTF_FLAGS)
 CFLAGS		+= $(C99MODE)
 CFLAGS		+= $(CCUNBOUND)
+CFLAGS		+= $(CGLOBALSTATIC)
 CFLAGS		+= $(CCSTATICSYM)
 CFLAGS		+= $(IROPTFLAG)
 CFLAGS		+= -xregs=no%float
