--- a/usr/src/uts/sun4v/arcfour2048/Makefile
+++ b/usr/src/uts/sun4v/arcfour2048/Makefile
@@ -2,8 +2,9 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License (the "License").
-# You may not use this file except in compliance with the License.
+# Common Development and Distribution License, Version 1.0 only
+# (the "License").  You may not use this file except in compliance
+# with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -69,7 +70,7 @@ COPTIMIZE	= -xO5 -xbuiltin=%all
 #
 # Override the default -xspace setting
 #
-sparc_SPACEFLAG	= -W0,-Lt
+sparc_SPACEFLAG	= -W0,-Lt -W2,-Rcond_elim
 
 #
 # Turn on doubleword alignment for 64 bit registers
