PSARC 2005/314 IP Duplicate Address Detection PSARC 2006/017 Arp Single Entry Display 1248254 NDD doesn't have explicit range checking for ARP NDD variables. 1253974 Please make a "permanent contents" option for arp vs. static 4069191 ace_t::ace_query_count field is not used anywhere. 4157198 ARP cache inconsistency between arp and ip modules. 4396195 ar_rput: ar_cmd_dispatch not necessary for every packet? 4705220 No IPv6 DAD performed during boot 4728609 IPv4 Duplicate Address Detection (DAD) is broken 4971789 Need unsolicited neighbor advertisements when interface comes up 4978063 SO_DONTROUTE option causes ARP traffic for every frame. 4997903 /usr/sbin/arp accepts invalid modifier keywords 6266155 flag on the play: ndp gets its bits confused 6272993 in.ndpd could be free of lint 6273003 arp shouldn't export status via ndd 6360928 ipif_arp_down debug message wrongly expects DLPI 6363393 6281236 causes generation of bogus NS 6454158 need a temporary work-around for 6451644's IPv6 impact 6456379 need ffs(3C)-like function in modapi

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -72,6 +72,7 @@ COMMON_SUBDIRS = \
 	cmd/cmd-inet/usr.lib/dsvclockd \
 	cmd/cmd-inet/usr.lib/in.dhcpd \
 	cmd/cmd-inet/usr.lib/in.mpathd \
+	cmd/cmd-inet/usr.lib/in.ndpd \
 	cmd/cmd-inet/usr.lib/inetd \
 	cmd/cmd-inet/usr.lib/mipagent \
 	cmd/cmd-inet/usr.lib/pppoe \
