--- a/usr/src/cmd/cmd-inet/sbin/dhcpagent/Makefile
+++ b/usr/src/cmd/cmd-inet/sbin/dhcpagent/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -30,7 +29,7 @@ PROG    = dhcpagent
 ROOTFS_PROG = $(PROG)
 DEFAULTFILES = dhcpagent.dfl
 
-LOCOBJS = adopt.o agent.o arp_check.o async.o bound.o class_id.o defaults.o   \
+LOCOBJS = adopt.o agent.o async.o bound.o class_id.o defaults.o   \
 	  dlpi_io.o dlprims.o inform.o init_reboot.o interface.o ipc_action.o \
 	  packet.o release.o renew.o request.o script_handler.o select.o util.o
 COMDIR  = $(SRC)/common/net/dhcp
