--- a/usr/src/cmd/cmd-inet/usr.lib/in.ndpd/Makefile
+++ b/usr/src/cmd/cmd-inet/usr.lib/in.ndpd/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,17 +18,16 @@
 #
 # CDDL HEADER END
 #
-#
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
+#
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 # cmd/cmd-inet/usr.lib/in.ndpd/Makefile
 #
 
 PROG=		in.ndpd
-OBJS=		config.o main.o ndp.o tables.o trace.o dupl_addr.o
+OBJS=		config.o main.o ndp.o tables.o trace.o
 SRCS=		$(OBJS:%.o=%.c)
 
 include		../../../Makefile.cmd
@@ -47,6 +45,14 @@ _D_UNIX98_EXTN= -D_XOPEN_SOURCE=500 -D__EXTENSIONS__
 $(OBJS)		:= CPPFLAGS +=	$(_D_UNIX98_EXTN)
 
 LINTFLAGS +=	$(_D_UNIX98_EXTN)
+
+# This shouldn't be necessary, but linking with libxnet requires it.
+LINTFLAGS +=	-erroff=E_INCONS_ARG_DECL2 -erroff=E_INCONS_VAL_TYPE_DECL2
+
+# This is needed to avoid littering the code with useless LINTED statements
+# for each place where pointers are casted.  It's not perfect, but being
+# perfect would require a bigger rewrite.
+LINTFLAGS +=	-erroff=E_BAD_PTR_CAST_ALIGN
 
 .KEEP_STATE:
 
