--- a/usr/src/lib/gss_mechs/mech_krb5/sparc/Makefile
+++ b/usr/src/lib/gss_mechs/mech_krb5/sparc/Makefile
@@ -19,13 +19,15 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 include ../Makefile.com
+
+sparc_C_PICFLAGS = $(C_BIGPICFLAGS)
 
 .KEEP_STATE:
 
