--- a/usr/src/uts/sun4u/Makefile.sun4u.shared
+++ b/usr/src/uts/sun4u/Makefile.sun4u.shared
@@ -205,6 +205,8 @@ CFLAGS		+= $(CERRWARN)
 CFLAGS		+= $(CTF_FLAGS)
 CFLAGS		+= $(C99MODE)
 CFLAGS		+= $(CCUNBOUND)
+CFLAGS		+= $(CCSTATICSYM)
+CFLAGS		+= $(IROPTFLAG)
 CFLAGS		+= $(CGLOBALSTATIC)
 CFLAGS		+= -xregs=no%float
 
