--- a/usr/src/uts/Makefile.uts
+++ b/usr/src/uts/Makefile.uts
@@ -456,6 +456,7 @@ ROOT_FONT_DIR_32	= $(ROOT_MOD_DIR)/fonts
 ROOT_DACF_DIR_32	= $(ROOT_MOD_DIR)/dacf
 ROOT_CRYPTO_DIR_32	= $(ROOT_MOD_DIR)/crypto
 ROOT_MAC_DIR_32		= $(ROOT_MOD_DIR)/mac
+ROOT_DEVNAME_DIR_32	= $(ROOT_MOD_DIR)/devname
 
 ROOT_KERN_DIR_64	= $(ROOT_MOD_DIR)/$(SUBDIR64)
 ROOT_DRV_DIR_64		= $(ROOT_MOD_DIR)/drv/$(SUBDIR64)
@@ -476,6 +477,7 @@ ROOT_FONT_DIR_64	= $(ROOT_MOD_DIR)/fonts/$(SUBDIR64)
 ROOT_DACF_DIR_64	= $(ROOT_MOD_DIR)/dacf/$(SUBDIR64)
 ROOT_CRYPTO_DIR_64	= $(ROOT_MOD_DIR)/crypto/$(SUBDIR64)
 ROOT_MAC_DIR_64		= $(ROOT_MOD_DIR)/mac/$(SUBDIR64)
+ROOT_DEVNAME_DIR_64	= $(ROOT_MOD_DIR)/devname/$(SUBDIR64)
 
 ROOT_KERN_DIR		= $(ROOT_KERN_DIR_$(CLASS))
 ROOT_DRV_DIR		= $(ROOT_DRV_DIR_$(CLASS))
@@ -496,6 +498,7 @@ ROOT_FONT_DIR		= $(ROOT_FONT_DIR_$(CLASS))
 ROOT_DACF_DIR		= $(ROOT_DACF_DIR_$(CLASS))
 ROOT_CRYPTO_DIR		= $(ROOT_CRYPTO_DIR_$(CLASS))
 ROOT_MAC_DIR		= $(ROOT_MAC_DIR_$(CLASS))
+ROOT_DEVNAME_DIR	= $(ROOT_DEVNAME_DIR_$(CLASS))
 
 ROOT_MOD_DIRS_32	= $(ROOT_DRV_DIR_32) $(ROOT_EXEC_DIR_32)
 ROOT_MOD_DIRS_32	+= $(ROOT_DTRACE_DIR_32)
@@ -507,6 +510,7 @@ ROOT_MOD_DIRS_32	+= $(ROOT_KGSS_DIR_32)
 ROOT_MOD_DIRS_32	+= $(ROOT_CPU_DIR_32) $(ROOT_FONT_DIR_32)
 ROOT_MOD_DIRS_32	+= $(ROOT_TOD_DIR_32) $(ROOT_DACF_DIR_32)
 ROOT_MOD_DIRS_32	+= $(ROOT_CRYPTO_DIR_32) $(ROOT_MAC_DIR_32)
+ROOT_MOD_DIRS_32	+= $(ROOT_DEVNAME_DIR_32)
 
 USR_MOD_DIR		= $(ROOT)/usr/kernel
 
@@ -519,6 +523,7 @@ USR_SYS_DIR_32		= $(USR_MOD_DIR)/sys
 USR_MISC_DIR_32		= $(USR_MOD_DIR)/misc
 USR_DACF_DIR_32		= $(USR_MOD_DIR)/dacf
 USR_PCBE_DIR_32		= $(USR_MOD_DIR)/pcbe
+USR_DEVNAME_DIR_32	= $(USR_MOD_DIR)/devname
 
 USR_DRV_DIR_64		= $(USR_MOD_DIR)/drv/$(SUBDIR64)
 USR_EXEC_DIR_64		= $(USR_MOD_DIR)/exec/$(SUBDIR64)
@@ -529,6 +534,7 @@ USR_SYS_DIR_64		= $(USR_MOD_DIR)/sys/$(SUBDIR64)
 USR_MISC_DIR_64		= $(USR_MOD_DIR)/misc/$(SUBDIR64)
 USR_DACF_DIR_64		= $(USR_MOD_DIR)/dacf/$(SUBDIR64)
 USR_PCBE_DIR_64		= $(USR_MOD_DIR)/pcbe/$(SUBDIR64)
+USR_DEVNAME_DIR_64	= $(USR_MOD_DIR)/devname/$(SUBDIR64)
 
 USR_DRV_DIR		= $(USR_DRV_DIR_$(CLASS))
 USR_EXEC_DIR		= $(USR_EXEC_DIR_$(CLASS))
@@ -539,12 +545,13 @@ USR_SYS_DIR		= $(USR_SYS_DIR_$(CLASS))
 USR_MISC_DIR		= $(USR_MISC_DIR_$(CLASS))
 USR_DACF_DIR		= $(USR_DACF_DIR_$(CLASS))
 USR_PCBE_DIR		= $(USR_PCBE_DIR_$(CLASS))
+USR_DEVNAME_DIR		= $(USR_DEVNAME_DIR_$(CLASS))
 
 USR_MOD_DIRS_32		= $(USR_DRV_DIR_32) $(USR_EXEC_DIR_32)
 USR_MOD_DIRS_32		+= $(USR_FS_DIR_32) $(USR_SCHED_DIR_32)
 USR_MOD_DIRS_32		+= $(USR_STRMOD_DIR_32) $(USR_SYS_DIR_32)
 USR_MOD_DIRS_32		+= $(USR_MISC_DIR_32) $(USR_DACF_DIR_32)
-USR_MOD_DIRS_32		+= $(USR_PCBE_DIR_32)
+USR_MOD_DIRS_32		+= $(USR_PCBE_DIR_32) $(USR_DEVNAME_DIR_32)
 
 #
 #
@@ -584,7 +591,8 @@ KMODS	= $(DRV_KMODS) $(EXEC_KMODS) $(FS_KMODS) $(SCHED_KMODS) $(TOD_KMODS) \
 	  $(MACH_KMODS) $(CPU_KMODS) $(GENUNIX_KMODS) \
 	  $(GSS_KMODS) $(MMU_KMODS) $(DACF_KMODS) $(EXPORT_KMODS) \
 	  $(IPP_KMODS) $(CRYPTO_KMODS) $(CRYPTO_EK_KMODS) $(PCBE_KMODS) \
-	  $(DRV_KMODS_$(CLASS)) $(MISC_KMODS_$(CLASS)) $(MAC_KMODS)
+	  $(DRV_KMODS_$(CLASS)) $(MISC_KMODS_$(CLASS)) $(MAC_KMODS) \
+	  $(DEVNAME_KMODS)
 
 $(CLOSED_BUILD)CLOSED_KMODS = $(CLOSED_DRV_KMODS) $(CLOSED_TOD_KMODS) \
 	$(CLOSED_MISC_KMODS) \
@@ -593,8 +601,9 @@ $(CLOSED_BUILD)CLOSED_KMODS = $(CLOSED_DRV_KMODS) $(CLOSED_TOD_KMODS) \
 LINT_KMODS = $(DRV_KMODS) $(EXEC_KMODS) $(FS_KMODS) $(SCHED_KMODS) \
 	  $(TOD_KMODS) $(STRMOD_KMODS) $(SYS_KMODS) $(MISC_KMODS) \
 	  $(MACH_KMODS) $(GSS_KMODS) $(DACF_KMODS) $(IPP_KMODS) \
-	  $(CRYPTO_KMODS) $(PCBE_KMODS) \
-	  $(DRV_KMODS_$(CLASS)) $(MISC_KMODS_$(CLASS)) $(MAC_KMODS)
+	  $(CRYPTO_KMODS) $(PCBE_KMODS) $(DEVNAME_KMODS) \
+	  $(DRV_KMODS_$(CLASS)) $(MISC_KMODS_$(CLASS)) $(MAC_KMODS) \
+	  $(DEVNAME_KMODS)
 
 $(CLOSED_BUILD)CLOSED_LINT_KMODS = $(CLOSED_DRV_KMODS) $(CLOSED_TOD_KMODS) \
 	  $(CLOSED_MISC_KMODS) $(CLOSED_DRV_KMODS_$(CLASS))
