4520634 lpsched creates unused directories upon startup 4706595 lp:lib potential race condition creating temporary file in delsystem.c 4726116 Anding pid with 99999 to generate unique name is broken. Try 0xFFFFF instead 6449119 libhttp-core directory should include license.txt file 6462816 UNIX98/UNIX03: *vsc* lp(1) -c with '-' file (stdin) tries to copy file named '-' 6463311 UNIX98/UNIX03: *vsc* non-root lp(1) commands which should succeed, fail with "cannot commit job"

--- a/usr/src/cmd/lp/cmd/Makefile
+++ b/usr/src/cmd/lp/cmd/Makefile
@@ -35,7 +35,7 @@ OWNER = root
 
 SUBDIRS =	lptest lpadmin lpsched adaptor scripts
 
-LOCALPROG =	lpsystem lpshut
+LOCALPROG =	lpshut
 
 SBINPROG =	lpfilter lpforms lpusers
 
@@ -48,7 +48,7 @@ OBJS=	$(SBINPROG:=.o)
 SRCS=          $(OBJS:.o=.c)
 
 POFILE=		lp_cmd.po
-POFILES=	$(SRCS:%.c=%.po) lpsystem.po lpschedlpshut.po
+POFILES=	$(SRCS:%.c=%.po) lpschedlpshut.po
 
 ROOTLIBLPLOCLPROG=	$(LOCALPROG:%=$(ROOTLIBLPLOCL)/%)
 ROOTSBINPROG=	$(SBINPROG:%=$(ROOTUSRSBIN)/%)
@@ -65,8 +65,6 @@ lpforms:=	LDLIBS += $(LIBFRM) $(LIBMSG) $(LIBREQ) $(LIBOAM) \
 			$(LIBACC) $(LIBLP) \
 			-z lazyload -lsecdb -z nolazyload
 lpshut:=	LDLIBS += $(LIBMSG) $(LIBOAM) $(LIBLP)
-lpsystem:=	LDLIBS += $(LIBSYS) $(LIBMSG) $(LIBACC) $(LIBOAM) $(LIBLP) \
-			-lnsl -z lazyload -lsecdb -z nolazyload
 lpusers:=	LDLIBS += $(LIBMSG) $(LIBACC) $(LIBOAM) $(LIBUSR) $(LIBLP)
 
 .KEEP_STATE:
@@ -85,7 +83,7 @@ clean:		$(SUBDIRS)
 clobber:	$(SUBDIRS) local_clobber
 
 local_clobber:
-		$(RM) $(OBJS) $(PROG) lpsystem.o $(CLOBBERFILES)
+		$(RM) $(OBJS) $(PROG) $(CLOBBERFILES)
 
 strip:		$(SUBDIRS)
 		$(STRIP) $(PROG)
