PSARC/2006/451 System V resource controls for Zones 6306668 RFE: there need to be zone limits for project-based system V resource controls

--- a/usr/src/uts/common/sys/Makefile
+++ b/usr/src/uts/common/sys/Makefile
@@ -258,6 +258,7 @@ CHKHDRS=			\
 	ioctl.h			\
 	ipc.h			\
 	ipc_impl.h		\
+	ipc_rctl.h		\
 	isa_defs.h		\
 	iscsi_authclient.h	\
 	iscsi_authclientglue.h	\
