PSARC 2006/421 MPO Control And Observability Tools 4698370 Want tool for applying advice to affect memory allocation via madvise(3C) 5048416 Want to be able to observe lgroup memory placement via pmap(1) 5048789 Want tool for observing and affecting thread placement on lgroups 6424359 Want Perl interface to liblgrp(3LIB) library 6424363 Want tool for observing lgroup information 6424366 Want walkers for lgroup resources and lineage 6424384 Want ps(1) to be lgroup-aware 6424387 Want prstat(1M) to be lgroup-aware 6455612 DTrace proc provider should have inline for thread home lgroup 6455724 Want thread home lgroup visibility via /proc 6457390 threads should rehome to lgroup with same (or more affinity) than existing home lgroup 6457640 Want to expose lgroup load average scale to user-land

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -211,6 +211,7 @@ COMMON_SUBDIRS=		\
 	lastcomm	\
 	ldap		\
 	ldapcachemgr	\
+	lgrpinfo	\
 	line		\
 	link		\
 	listen		\
@@ -562,6 +563,7 @@ MSGSUBDIRS=		\
 	last		\
 	ldap		\
 	ldapcachemgr	\
+	lgrpinfo	\
 	locale		\
 	lofiadm		\
 	logadm		\
@@ -605,6 +607,7 @@ MSGSUBDIRS=		\
 	prtdiag		\
 	ps		\
 	psrinfo		\
+	ptools		\
 	pwconv		\
 	pwd		\
 	raidctl		\
