--- a/usr/src/cmd/ptools/Makefile
+++ b/usr/src/cmd/ptools/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,12 +18,14 @@
 #
 # CDDL HEADER END
 #
+
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 1994-2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
+# ident	"%Z%%M%	%I%	%E% SMI"
+#
+
 
 include ../Makefile.cmd
 
@@ -52,6 +53,8 @@ LEGACY_SUBDIRS =\
 #
 NEW_SUBDIRS =	\
 	pargs	\
+	plgrp	\
+	pmadvise \
 	ppriv	\
 	preap
 
@@ -62,6 +65,13 @@ install	:=	TARGET = install
 clean	:=	TARGET = clean
 clobber	:=	TARGET = clobber
 lint	:=	TARGET = lint
+_msg	:=	TARGET = _msg
+
+#
+# Commands with messages support
+#
+POFILES = plgrp/plgrp.po pmadvise/pmadvise.po
+POFILE = ptools.po
 
 .KEEP_STATE:
 
@@ -74,4 +84,15 @@ $(NEW_SUBDIRS): FRC
 
 $(LEGACY_SUBDIRS): FRC
 	@cd $@; pwd; $(MAKE) PTOOL_TYPE=LEGACY -f ../Makefile.ptool $(TARGET)
+
+#
+# Combine all messages files into a single file and copy it to
+# MSGDOMAIN directory
+#
+_msg: ${POFILES}
+	$(RM) $(POFILE)
+	$(CAT) $(POFILES) > $(POFILE)
+	$(RM)  $(MSGDOMAIN)/$(POFILE)
+	$(CP) $(POFILE) $(MSGDOMAIN)
+
 FRC:
