6456599 audioixp driver needs to move from usr/closed to usr/src

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -375,6 +375,8 @@ AUDIO810_OBJS += audio810.o
 
 AUDIOHD_OBJS +=	audiohd.o
 
+AUDIOIXP_OBJS += audioixp.o
+
 AUDIOTS_OBJS +=	audiots.o
 
 CARDBUS_OBJS += cardbus.o cardbus_hp.o cardbus_cfg.o
