--- a/usr/src/uts/i86pc/Makefile.i86pc.shared
+++ b/usr/src/uts/i86pc/Makefile.i86pc.shared
@@ -252,6 +252,7 @@ DRV_KMODS	+= kb8042
 DRV_KMODS	+= pci-ide
 DRV_KMODS	+= audio810
 DRV_KMODS	+= audiohd
+DRV_KMODS	+= audioixp
 
 DRV_KMODS_32	+= dnet
 DRV_KMODS	+= logi
@@ -270,7 +271,6 @@ DRV_KMODS	+= pcic
 
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audiovia823x
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audioens
-$(CLOSED_BUILD)CLOSED_DRV_KMODS		+= audioixp
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= bmc
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= bscbus
 $(CLOSED_BUILD)CLOSED_DRV_KMODS		+= bscv
