6467522 event-transport: add filter interfaces 6468866 event-transport: server not sending resource.fm.xprt.ack event first

--- a/usr/src/cmd/fm/modules/SUNW,SPARC-Enterprise/event-transport/event-transport.conf
+++ b/usr/src/cmd/fm/modules/SUNW,SPARC-Enterprise/event-transport/event-transport.conf
@@ -43,6 +43,14 @@
 #		Sets the timeout value for a read or write I/O operation.
 #		Time is in nanoseconds.
 #
+#	setprop filter_path <path>
+#
+#		Specifies the location of a platform-specific filter plugin
+#		for incoming and outgoing events.  No assumptions are made
+#		regarding the relative path or the name of the filter plugin.
+#		Therefore, the absolute path and the name of the binary must
+#		be used.
+#
 #	setprop client_list <FMRI string>
 #
 #		Specifies a list of peers this module will accept a
