--- a/usr/src/cmd/fs.d/pcfs/fsck/Makefile
+++ b/usr/src/cmd/fs.d/pcfs/fsck/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,8 +21,8 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1999,2001 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 # cmd/fs.d/pcfs/fsck/Makefile
 
@@ -42,18 +41,8 @@ FSCKSRCS=	$(FSCKOBJS:%.o=%.c)
 #DEBUGOBJS=	inject.o
 #DEBUGSRCS=	$(DEBUGOBJS:%.o=%.c)
 
-#
-# We grab one file from the kernel.  It has a relatively complex routine
-# for manipulating time values into the format expected within directory
-# entries in the FAT file system [pc_tvtopct()].  It seemed better not to
-# duplicate this code.
-#
-PCFSDIR=	../../../../uts/common/fs/pcfs
-PCFSOBJS=	pc_subr.o
-PCFSSRCS=	$(PCFSOBJS:%.o=%.c)
-
-OBJS=		$(FSCKOBJS) $(PCFSOBJS) $(DEBUGOBJS)
-SRCS=		$(FSCKSRCS) $(PCFSDIR)/$(PCFSSRCS) $(DEBUGSRCS)
+OBJS=		$(FSCKOBJS) $(DEBUGOBJS)
+SRCS=		$(FSCKSRCS) $(DEBUGSRCS)
 LSRCS=		$(FSCKSRCS) $(DEBUGSRCS)
 
 # for messaging catalog
@@ -79,13 +68,10 @@ $(LIBPROG):	$(OBJS)
 		$(LINK.c) -o $@ $(OBJS) $(LDLIBS)
 		$(POST_PROCESS)
 
-%.o:	$(PCFSDIR)/%.c
-	$(COMPILE.c) -D_KERNEL $<
-
 lint_LSRCS:
 	$(LINT.c) $(LSRCS) $(LDLIBS)
 
 lint:	lint_LSRCS
 
 clean:
-	$(RM) $(FSCKOBJS) $(PCFSOBJS) $(DEBUGOBJS)
+	$(RM) $(FSCKOBJS) $(DEBUGOBJS)
