--- a/usr/src/lib/brand/lx/librtld_db/i386/Makefile
+++ b/usr/src/lib/brand/lx/librtld_db/i386/Makefile
@@ -34,4 +34,4 @@ include ../Makefile.com
 
 CLOBBERFILES =	$(ROOTLIBDIR)/$(DYNLIB)
 
-install: $(ROOTLIBDIR) all $(ROOTLIBS)
+install: all $(ROOTLIBS)
