--- a/usr/src/lib/brand/lx/lx_thunk/i386/Makefile
+++ b/usr/src/lib/brand/lx/lx_thunk/i386/Makefile
@@ -30,4 +30,4 @@ include ../Makefile.com
 
 CLOBBERFILES	= $(ROOTLIBDIR)/$(DYNLIB) $(ROOTLIBDIR)/$(LINTLIB)
 
-install: $(ROOTLIBDIR) all $(ROOTLIBS)
+install: all $(ROOTLIBS)
