--- a/usr/src/lib/brand/lx/zone/Makefile
+++ b/usr/src/lib/brand/lx/zone/Makefile
@@ -49,8 +49,7 @@ $(POFILE): $(POFILES)
 
 _msg: $(MSGDOMAINPOFILE)
 
-install: $(PROGS) $(ROOTBRANDDIR) $(ROOTTEMPLATEDIR) $(ROOTXMLDOCS) \
-	$(ROOTTEMPLATES) $(ROOTPROGS) $(SUBDIRS)
+install: $(PROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES) $(ROOTPROGS) $(SUBDIRS)
 
 lint:
 
