--- a/usr/src/lib/brand/native/zone/Makefile
+++ b/usr/src/lib/brand/native/zone/Makefile
@@ -47,8 +47,7 @@ _msg: $(MSGDOMAINPOFILE)
 
 lint:
 
-install: $(PROGS) $(ROOTBRANDDIR) $(ROOTPROGS) $(ROOTXMLDOCS) \
-    $(ROOTTEMPLATEDIR) $(ROOTTEMPLATES)
+install: $(PROGS) $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
 
 clean:
 	-$(RM) $(PROGS)
