--- a/usr/src/lib/brand/lx/librtld_db/Makefile
+++ b/usr/src/lib/brand/lx/librtld_db/Makefile
@@ -43,7 +43,7 @@ lint :=         TARGET= lint
 
 .KEEP_STATE:
 
-all install clean clobber: $(ROOTBRANDDIR) $(ROOTBRANDDIR64) $(SUBDIRS)
+all install clean clobber: $(SUBDIRS)
 
 lint: $(LINT_SUBDIRS)
 
