--- a/usr/src/lib/brand/lx/zone/distros/Makefile
+++ b/usr/src/lib/brand/lx/zone/distros/Makefile
@@ -44,7 +44,7 @@ $(ROOTDISTRODIR):
 $(ROOTDISTRODIR)/%: %
 	$(INS.file)
 
-install: $(ROOTDISTRODIR) $(ROOTDISTROS)
+install: $(ROOTDISTROS)
 
 lint clean all:
 
