--- a/usr/src/lib/brand/sn1/zone/Makefile
+++ b/usr/src/lib/brand/sn1/zone/Makefile
@@ -40,8 +40,7 @@ lint:
 clean:
 	-$(RM) $(PROGS)
 
-install: $(ROOTBRANDDIR) $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATEDIR) \
-    $(ROOTTEMPLATES)
+install: $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
 
 clobber:
 	-$(RM) $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
