6470132 sn1 zone always tried to pre_load /usr/lib/amd64/sn1_brand.so on sparcv9. 6470732 sn1 brand should 'make clobber' more thoroughly 6471923 sn1 brand should not emulate fork1()

--- a/usr/src/lib/brand/lx/netfiles/Makefile
+++ b/usr/src/lib/brand/lx/netfiles/Makefile
@@ -40,7 +40,7 @@ install: $(ROOTTXTS)
 clean:
 	-$(RM) etc_default_nfs
 
-clobber:
+clobber: clean
 	-$(RM) $(ROOTXMLDOCS) $(ROOTTXTS)
 
 etc_default_nfs: $(NFS_DFL)
