--- a/usr/src/lib/brand/native/zone/Makefile
+++ b/usr/src/lib/brand/native/zone/Makefile
@@ -52,7 +52,7 @@ install: $(PROGS) $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
 clean:
 	-$(RM) $(PROGS)
 
-clobber:
+clobber: clean
 	-$(RM) $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
 
 include $(SRC)/Makefile.msg.targ
