--- a/usr/src/lib/brand/sn1/zone/Makefile
+++ b/usr/src/lib/brand/sn1/zone/Makefile
@@ -42,5 +42,5 @@ clean:
 
 install: $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
 
-clobber:
+clobber: clean
 	-$(RM) $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
