--- a/usr/src/uts/i86pc/Makefile.i86pc.shared
+++ b/usr/src/uts/i86pc/Makefile.i86pc.shared
@@ -242,6 +242,7 @@ MACH_NOT_YET_KMODS	= $(AUTOCONF_OBJS)
 DRV_KMODS	+= rootnex
 DRV_KMODS	+= isa
 DRV_KMODS	+= pci
+DRV_KMODS	+= pci_pci
 DRV_KMODS	+= pcie_pci
 DRV_KMODS	+= npe
 
