6472057 /usr/lib/abi/spec2map missing from snv_48

--- a/usr/src/cmd/abi/Makefile
+++ b/usr/src/cmd/abi/Makefile
@@ -25,7 +25,7 @@
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
 
-SUBDIRS = apptracecmd appcert
+SUBDIRS = spectrans apptracecmd appcert
 
 all		:=	TARGET= all
 install		:=	TARGET= install
