6457918 Java DTrace API does not support umod()/ufunc()/usym(), mod()/func()/sym() 6467507 Java DTrace API javadoc links to DTrace guide broken 6468139 ufunc() aggregation key sorts strangely 6470482 Aggregation key integer representation and ordering differs between Java API and libdtrace 6470519 LocalConsumer CLOSED state reverts to STOPPED

--- a/usr/src/lib/libdtrace_jni/java/Makefile
+++ b/usr/src/lib/libdtrace_jni/java/Makefile
@@ -125,6 +125,7 @@ API_CLASSNAMES=\
 	Flow \
 	InterfaceAttributes \
 	KernelStackRecord \
+	KernelSymbolRecord \
 	LinearDistribution \
 	LocalConsumer \
 	LogDistribution \
@@ -148,8 +149,10 @@ API_CLASSNAMES=\
 	StackFrame \
 	StackValueRecord \
 	SumValue \
+	SymbolValueRecord \
 	Tuple \
 	UserStackRecord \
+	UserSymbolRecord \
 	Utility \
 	ValueRecord
 
