6466789 decouple devices cache management implementation from consumers

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -111,8 +111,9 @@ GENUNIX_OBJS +=	\
 		ddi_nodeid.o	\
 		ddi_strtol.o	\
 		devcfg.o	\
-		devctl.o	\
+		devcache.o	\
 		devid.o		\
+		devid_cache.o	\
 		devid_scsi.o	\
 		devpolicy.o	\
 		disp_lock.o	\
