6466078 zonecfg creating a zone failed sporadically. 6466818 lx_getpid() may inadvertently dereference a NULL pointer 6468329 Need distro files for RHEL 3.8 and CentOS 3.8

--- a/usr/src/lib/brand/lx/zone/distros/Makefile
+++ b/usr/src/lib/brand/lx/zone/distros/Makefile
@@ -29,7 +29,8 @@
 include ../../Makefile.lx
 
 DISTROS =	centos35.distro centos36.distro centos37.distro \
-		rhel35.distro rhel36.distro rhel37.distro rhel_centos_common
+		centos38.distro rhel35.distro rhel36.distro rhel37.distro \
+		rhel38.distro rhel_centos_common
 
 ROOTDISTRODIR=	$(ROOTBRANDDIR)/distros
 ROOTDISTROS=	$(DISTROS:%=$(ROOTDISTRODIR)/%)
